--- a/index.css
+++ b/index.css
@@ -4,8 +4,10 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: Arial, Helvetica, sans-serif;
+ @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+
+ body{
+    font-family: 'Overpass', sans-serif;
     padding: 20px 0;
     width: 375px;
     margin: auto; 
@@ -29,6 +31,14 @@ body{
     margin: auto;
     border-radius: 20px;
     background-color: hsl(213, 19%, 18%);
+    position: relative;
+    top: 170px;
+}
+
+.thank{
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .shadow{
@@ -46,19 +56,16 @@ body{
     width: 12px;
 }
 
-.attribution { 
-    font-size: 11px; 
-    text-align: center; 
+.please{
+    font-size: 15px;
+    line-height: 20px;
 }
 
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
-    text-decoration: none;
-}
-
-.list li{
- list-style: none;
- display: inline;
+.list{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 button{
@@ -80,8 +87,9 @@ button:focus{
 }
 
 #button{
+    font-weight: 400;
     cursor: pointer;
-    width: 250px;
+    width: 290px;
     height: 40px;
     border-radius: 30px;
     border: none;
@@ -101,5 +109,33 @@ button:focus{
 .select{
     color: hsl(25, 97%, 53%);
     background-color: hsl(218, 9%, 25%);
-    height: 30px;
+    height: 35px;
+    width: 190px;
+    border-radius: 20px;
+    padding: 9px;
+    margin: auto;
+}
+
+.thanks{
+    transform: scale(1.5);
+}
+
+.appreciate{
+    text-align: center;
+    /* transform: scale(1); */
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+    position: relative;
+    top: 180px;
+    margin: auto;
+}
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+    text-decoration: none;
 }
